--- a/TuVanMuaXeMayHCG/TuVanMuaXeMayHCG.csproj
+++ b/TuVanMuaXeMayHCG/TuVanMuaXeMayHCG.csproj
@@ -47,16 +47,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BUS\DacDiemBUS.cs" />
+    <Compile Include="BUS\DoiTuongBUS.cs" />
     <Compile Include="BUS\GiaTienBUS.cs" />
-    <Compile Include="BUS\DungTichBUS.cs" />
     <Compile Include="BUS\HangBUS.cs" />
+    <Compile Include="BUS\KieuDangBUS.cs" />
     <Compile Include="BUS\LoaiXeBUS.cs" />
     <Compile Include="BUS\LuatBUS.cs" />
     <Compile Include="BUS\XeBUS.cs" />
+    <Compile Include="DAL\DacDiemDAL.cs" />
     <Compile Include="DAL\DataProvider.cs" />
-    <Compile Include="DAL\DungTichDAL.cs" />
+    <Compile Include="DAL\DoiTuongDAL.cs" />
     <Compile Include="DAL\GiaTienDAL.cs" />
     <Compile Include="DAL\HangDAL.cs" />
+    <Compile Include="DAL\KieuDangDAL.cs" />
     <Compile Include="DAL\LoaiXeDAL.cs" />
     <Compile Include="DAL\LuatDAL.cs" />
     <Compile Include="DAL\XeDAL.cs" />
@@ -65,17 +69,25 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>db.dbml</DependentUpon>
     </Compile>
-    <Compile Include="DTO\DungTichDTO.cs" />
+    <Compile Include="DTO\DacDiemDTO.cs" />
+    <Compile Include="DTO\DoiTuongDTO.cs" />
     <Compile Include="DTO\GiaTienDTO.cs" />
     <Compile Include="DTO\HangDTO.cs" />
+    <Compile Include="DTO\KieuDangDTO.cs" />
     <Compile Include="DTO\LoaiXeDTO.cs" />
     <Compile Include="DTO\LuatDTO.cs" />
     <Compile Include="DTO\XeDTO.cs" />
-    <Compile Include="GUI\formDungTich.cs">
+    <Compile Include="GUI\formDacDiem.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GUI\formDungTich.Designer.cs">
-      <DependentUpon>formDungTich.cs</DependentUpon>
+    <Compile Include="GUI\formDacDiem.Designer.cs">
+      <DependentUpon>formDacDiem.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\formDoiTuong.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\formDoiTuong.Designer.cs">
+      <DependentUpon>formDoiTuong.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\formGiaTien.cs">
       <SubType>Form</SubType>
@@ -88,6 +100,12 @@
     </Compile>
     <Compile Include="GUI\formHang.Designer.cs">
       <DependentUpon>formHang.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\formKieuDang.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\formKieuDang.Designer.cs">
+      <DependentUpon>formKieuDang.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\formLoaiXe.cs">
       <SubType>Form</SubType>
@@ -123,14 +141,20 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\FowardChaningUtil.cs" />
     <Compile Include="Utilities\MoveItem.cs" />
-    <EmbeddedResource Include="GUI\formDungTich.resx">
-      <DependentUpon>formDungTich.cs</DependentUpon>
+    <EmbeddedResource Include="GUI\formDacDiem.resx">
+      <DependentUpon>formDacDiem.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\formDoiTuong.resx">
+      <DependentUpon>formDoiTuong.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\formGiaTien.resx">
       <DependentUpon>formGiaTien.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\formHang.resx">
       <DependentUpon>formHang.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\formKieuDang.resx">
+      <DependentUpon>formKieuDang.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\formLoaiXe.resx">
       <DependentUpon>formLoaiXe.cs</DependentUpon>
