--- a/TuVanMuaXeMayHCG/TuVanMuaXeMayHCG.csproj
+++ b/TuVanMuaXeMayHCG/TuVanMuaXeMayHCG.csproj
@@ -208,6 +208,11 @@
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\haui.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\unnamed.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
